--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -130,11 +130,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainMenuScene.cpp" />
     <ClCompile Include="parse_data.cpp" />
+    <ClCompile Include="ScreenManager.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SongMenuScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="parse_data.h" />
+    <ClInclude Include="ScreenManager.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SongMenuScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
