--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\SFML-2.6.0-windows-vc17-64-bit\SFML-2.6.0\include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,6 +143,7 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="parse_data.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SongMenuScene.h" />
