--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="AudioManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SongInfo.h">
+      <Filter>헤더 파일\GameObj</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
