--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -143,8 +143,10 @@
   <ItemGroup>
     <ClInclude Include="AlbumArt.h" />
     <ClInclude Include="AudioManager.h" />
+    <ClInclude Include="ComboText.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="MainMenuScene.h" />
+    <ClInclude Include="Note.h" />
     <ClInclude Include="parse_data.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Scene.h" />
