use comboText class, add gameManager

--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -133,6 +133,8 @@
   <ItemGroup>
     <ClCompile Include="AlbumArt.cpp" />
     <ClCompile Include="AudioManager.cpp" />
+    <ClCompile Include="ComboText.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuScene.cpp" />
@@ -144,6 +146,7 @@
     <ClInclude Include="AlbumArt.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="ComboText.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="Note.h" />
