--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="ComboText.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="judgeText.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuScene.cpp" />
     <ClCompile Include="parse_data.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="ComboText.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="judgeText.h" />
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="Note.h" />
     <ClInclude Include="parse_data.h" />
