--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="judgeText.cpp">
       <Filter>소스 파일\inGame\obj</Filter>
     </ClCompile>
+    <ClCompile Include="ResultScene.cpp">
+      <Filter>소스 파일\Scene\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -124,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="judgeText.h">
       <Filter>헤더 파일\inGame\obj</Filter>
+    </ClInclude>
+    <ClInclude Include="ResultScene.h">
+      <Filter>헤더 파일\Scene\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
