--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -140,7 +140,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuScene.cpp" />
     <ClCompile Include="parse_data.cpp" />
-    <ClCompile Include="ResultScene.cpp" />
+    <ClCompile Include="ResultUI.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SongMenuScene.cpp" />
   </ItemGroup>
@@ -154,7 +154,7 @@
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="Note.h" />
     <ClInclude Include="parse_data.h" />
-    <ClInclude Include="ResultScene.h" />
+    <ClInclude Include="ResultUI.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="signal.h" />
