--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="judgeText.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuScene.cpp" />
+    <ClCompile Include="OptionScene.cpp" />
     <ClCompile Include="parse_data.cpp" />
     <ClCompile Include="ResultUI.cpp" />
     <ClCompile Include="SceneManager.cpp" />
@@ -153,6 +154,8 @@
     <ClInclude Include="judgeText.h" />
     <ClInclude Include="MainMenuScene.h" />
     <ClInclude Include="Note.h" />
+    <ClInclude Include="options.h" />
+    <ClInclude Include="OptionScene.h" />
     <ClInclude Include="parse_data.h" />
     <ClInclude Include="ResultUI.h" />
     <ClInclude Include="SceneManager.h" />
