--- a/Project31/Project31.vcxproj
+++ b/Project31/Project31.vcxproj
@@ -172,6 +172,20 @@
     <ClInclude Include="NotePlate.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="Songs\End Time\audio.mp3" />
+    <Media Include="Songs\FLOWER\audio.mp3" />
+    <Media Include="Songs\Fly far bounce\audio.mp3" />
+    <Media Include="Songs\invisible bullets\audio.mp3" />
+    <Media Include="Songs\KillerToy\audio.mp3" />
+    <Media Include="Songs\Ouka Ryouran\audio.mp3" />
+    <Media Include="Songs\Poochie\audio.mp3" />
+    <Media Include="Songs\SAtAN\audio.mp3" />
+    <Media Include="Songs\smooooch\audio.mp3" />
+    <Media Include="Songs\The Shortest Mashcore Ever\audio.mp3" />
+    <Media Include="Songs\Tithonus\audio.mp3" />
+    <Media Include="Songs\WYNEHOUSE\audio.mp3" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
