--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="소스 파일\inGame\obj">
       <UniqueIdentifier>{67f14964-5f07-4250-8846-ad032cf90fdb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="리소스 파일\musics">
+      <UniqueIdentifier>{8f027b98-070a-44cf-a398-04265e26fd41}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -91,6 +94,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="utils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="playResult.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -155,5 +161,46 @@
     <ClInclude Include="utils.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="playResult.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Songs\End Time\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\FLOWER\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\Fly far bounce\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\invisible bullets\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\KillerToy\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\Ouka Ryouran\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\Poochie\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\SAtAN\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\smooooch\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\The Shortest Mashcore Ever\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\Tithonus\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
+    <Media Include="Songs\WYNEHOUSE\audio.mp3">
+      <Filter>리소스 파일\musics</Filter>
+    </Media>
   </ItemGroup>
 </Project>
