--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="playResult.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="socresPannel.cpp">
+      <Filter>소스 파일\inGame\obj</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -163,6 +166,9 @@
     </ClInclude>
     <ClInclude Include="playResult.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="socresPannel.h">
+      <Filter>헤더 파일\inGame\obj</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
