--- a/Project31/Project31.vcxproj.filters
+++ b/Project31/Project31.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="NameInputUI.cpp">
       <Filter>소스 파일\UI</Filter>
     </ClCompile>
+    <ClCompile Include="DebugingScene.cpp">
+      <Filter>소스 파일\Scene\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="signal.h">
@@ -187,6 +190,9 @@
     </ClInclude>
     <ClInclude Include="NameInputUI.h">
       <Filter>헤더 파일\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugingScene.h">
+      <Filter>헤더 파일\Scene\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
